--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World !
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" <title>Portfolio</title>
+</head>
+
+<body>
+    Hello World Again !
+</body>
+
+</html>
