--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href"style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Portfolio</title>
 </head>
@@ -17,18 +18,42 @@
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
             <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" <span class="navbar-toggler-icon"></span>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggler" <ul class="navbar-nav ms-auto mb-2">
-                <li class="nav-item">
-                    <a class="nav-link font-black" href="#about">About</a>
-                </li>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link font-black" href="#project">Projects</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/IMG_0405.jpg">
+        <div class="name">Kia IvyAnderson</div>
+        <div class="vocation"> Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) /
+            Docker (Basics)</div>
+        <p>
+            I am a web developer focused on creativity and innovation. As the front-end developer I have worked on...
+        </p>
+        <div class="email">Kluhv22@gmail.com</div>
+        <div class="icons">
+            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="#"><i class="bi bi-linkedin ms-5"></i></a>
+        </div>
+
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
