--- a/index.html
+++ b/index.html
@@ -52,11 +52,57 @@
         </div>
 
     </div>
+    <div id="project">
+        <h2><span class="font-primary">P</span>roject</h2>
+
+       <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-twitter.png" class="img-fluid rounded-start" alt="Twitter Project">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Twitter Clone</h5>
+                        <p class="card-text">This is a twitter based project.</p>
+                        <p class="card-text"><small class="text-muted">
+                                Test Login Account <br>
+                                Email : testaccount@gmail.com <br>
+                                Password : 123456
+                            </small></p>
+                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                        <a hre f="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-netflix.png" class="img-fluid rounded-start" alt="Netflix Project">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Netflix Clone</h5>
+                        <p class="card-text">This is a Netflix based project.</p>
+                        <p class="card-text"><small class="text-muted">
+                                Test Login Account <br>
+                                Email : testaccount@gmail.com <br>
+                                Password : 123456
+                            </small></p>
+                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                        <a hre f="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
