--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         </p>
         <div class="email">Kluhv22@gmail.com</div>
         <div class="icons">
-            <a href="#"><i class="bi bi-github"></i></a>
-            <a href="#"><i class="bi bi-linkedin ms-5"></i></a>
+            <a href="https://github.com/Kluhv22"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/kia-anderson-242a03244/"><i class="bi bi-linkedin ms-5"></i></a>
         </div>
 
     </div>
     <div id="project">
         <h2><span class="font-primary">P</span>roject</h2>
 
-       <div class="card mb-3">
+        <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/project-twitter.png" class="img-fluid rounded-start" alt="Twitter Project">
